# mcmc

./: .gitignore  README.md  errors.py  mcmc.py  pyproject.toml
doc/: decryption.md  sampling.md
doc/sampling/: sampling.md
src/: McmcException.py  McmcFile.py  decryption.py  errors.py  file.py  sampling.py
src/MCMC_AU/: Decryption.py  Sampling.py
test/: Decryption.py  module.py  sampling.py
